SQuirreL SQL FX Change Log
==============================

Bug fix: Reload (F5) was executed twice when the object tree tab was selected

Feature: Automated reload on database meta data changes

Feature: Duplicate line in SQL editor (ctrl+D)

Feature: Right click on result tabs to Close All or Close All But This

Upgraded RichTextFX to version 0.6.3.

Bug fix: Autocomplete for column names throwing cast error on Oracle

Feature: Data type highlight support for Oracle varchar2

Bug fix: SQLs where executed twice

Feature: Refresh button (F5) to reload of database meta data.

Feature: Tools popup --> In the SQL editor type ctrl+t to open SQuirreL's tools popup.

Feature: Multiple SQLs can be executed at once when separated by the statement separator defined in settings (see menu File --> Settings).

Feature: Made ctrl+left/right caret movement and ctrl+shift+left/right selection work like in Swing-SQuirreL.

Feature: Upgraded RichTextFX to version 0.6. This version eliminates some previous layout and rendering problems.

Feature: Store result of SQL in table function available in right mouse menu of SQL editor.

Feature: Escape date dialog available in right mouse menu of SQL editor.

Feature: Settings dialog for user defined settings. See menu File --> Settings.

Bug fix: NullPointerException occurred when connecting to some versions Oracle.

Feature: Editable cell data popup when SQL result ist being edited.

Bug fix: Editing SQL results didn't work for case sensitive database systems, e.g. MySQL in some cases.

Bug fix: Two fixes concerning Excel export of SQL results:
         1. Excel export did break at first run when no command was edited.
         2. On Windows when using a command the path to the exported file was not well formed.

Feature: Right click menu in SQL results displays an export option. Ability to export SQL results as xls or xlsx file.

Bug fix: Too long SQLs in result tab and header texts

Feature: Cell data popup
